hphp/test/slow/reified-generics/soft-reification-2.php.expectf
Warning: Generic at index 2 to Class C must be reified, erased given in %s on line 3

Warning: Generic at index 2 to Class C must be reified, erased given in %s on line 3

Fatal error: Uncaught exception 'BadMethodCallException' with message 'Class C expects a reified generic at index 3' in %s:%d
Stack trace:
%A
